# file-organizer

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  makefile
apps/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/backend/app/: config.py  main.py  rate_limit.py
apps/backend/app/modules/ai/api/: router.py
apps/backend/app/modules/ai/application/: classification_cache.py  classifier.py
apps/backend/app/modules/ai/domain/: constants.py  models.py
apps/backend/app/modules/ai/infrastructure/: openrouter_client.py
apps/backend/app/modules/files/api/: router.py
apps/backend/app/modules/files/domain/: models.py
apps/backend/app/modules/folder_explorer/api/: router.py
apps/backend/app/shared/: logger.py  ownership.py  traversal.py
apps/backend/sandbox_template/Downloads/: budget.csv  meeting_notes.txt
apps/backend/sandbox_template/code_organizer/Project/: CHANGELOG.md  README.md  config.json  deploy.yml  helpers.tsx  index.ts  main.py  package.json  utils.py
apps/backend/sandbox_template/document_classifier/Inbox/: annual_summary_2023.txt  invoice_acme_jan.txt  invoice_freelance_mar.txt  invoice_techcorp_feb.txt  nda_partner_abc.txt  partnership_contract.txt  q1_2024_report.txt  service_agreement_xyz.txt
apps/backend/tests/: conftest.py  test_classification_cache.py  test_conditions.py  test_copy.py  test_dry_run.py  test_execute_workflow.py  test_file_nodes.py  test_item_tree.py  test_live_item_tree.py  test_move.py  test_persistence.py  test_preview_token.py  test_resumable.py  test_sandbox.py  test_warnings.py
(+234 files in other folders)
