[project]
name = "file-organizer-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128",
    "uvicorn[standard]>=0.39",
    "pydantic>=2.13",
    "pydantic-settings>=2.11",
    "python-dotenv>=1.2",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.26",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
